# GstPlayer

./: CMakeLists.txt  README.md  client.cpp  client.h  config.h  discoverer.cpp  discoverer.h  player.cpp  player.h  server.cpp  socket.cpp  socket.h  tools.cpp  tools.h
